--- a/about.html
+++ b/about.html
@@ -71,7 +71,8 @@
             Trained in Testing, Development and Database and worked in projects
             related to them. Worked in ESI account related to US healthcare
             domain. Gained skills in creating test cases and test data and
-            preparing reports.
+            preparing reports. Experience in building responsive User Interface
+            components using JavaScript, HTML, Angular, React Js.
           </p>
         </div>
 
@@ -99,7 +100,7 @@
       </div>
     </main>
 
-    <footer id="main-footer">Copyright &copy; 2018</footer>
+    <footer id="main-footer">Copyright &copy; 2020</footer>
 
     <script src="js/main.js"></script>
   </body>
