--- a/work.html
+++ b/work.html
@@ -53,6 +53,21 @@
       <div class="projects">
         <div class="item">
           <a href="#!">
+            <img src="img/projects/project6.jpg" alt="Project" />
+          </a>
+          <a href="#" class="btn-light">
+            <i class="fas fa-eye"></i> FitnessTracker
+          </a>
+          <a
+            href="https://github.com/sandeepsalkuti/Portfolio"
+            class="btn-dark"
+          >
+            <i class="fab fa-github"></i> Github
+          </a>
+        </div>
+
+        <div class="item">
+          <a href="#!">
             <img src="img/projects/project1.jpg" alt="Project" />
           </a>
           <a href="#" class="btn-light">
@@ -124,7 +139,7 @@
       </div>
     </main>
 
-    <footer id="main-footer">Copyright &copy; 2020</footer>
+    <footer id="main-footer">Copyright &copy; 2022</footer>
 
     <script src="js/main.js"></script>
   </body>
